# libstemmer_c

./: LICENSE  README.md  meson.build
libstemmer/: libstemmer.c  libstemmer_utf8.c  modules.h  modules_utf8.h
src_c/: stem_ISO_8859_1_danish.c  stem_ISO_8859_1_dutch.c  stem_ISO_8859_1_english.c  stem_ISO_8859_1_finnish.c  stem_ISO_8859_1_french.c  stem_ISO_8859_1_german.c  stem_ISO_8859_1_indonesian.c  stem_ISO_8859_1_irish.c  stem_ISO_8859_1_italian.c  stem_ISO_8859_1_norwegian.c  stem_ISO_8859_1_porter.c  stem_ISO_8859_1_portuguese.c  stem_ISO_8859_1_spanish.c  stem_ISO_8859_1_swedish.c  stem_ISO_8859_2_hungarian.c  stem_ISO_8859_2_romanian.c  stem_KOI8_R_russian.c  stem_UTF_8_arabic.c  stem_UTF_8_danish.c  stem_UTF_8_dutch.c  stem_UTF_8_english.c  stem_UTF_8_finnish.c  stem_UTF_8_french.c  stem_UTF_8_german.c  stem_UTF_8_greek.c  stem_UTF_8_hindi.c  stem_UTF_8_hindi.h  stem_UTF_8_hungarian.c  stem_UTF_8_indonesian.c  stem_UTF_8_irish.c  stem_UTF_8_italian.c  stem_UTF_8_lithuanian.c  stem_UTF_8_nepali.c  stem_UTF_8_norwegian.c  stem_UTF_8_porter.c  stem_UTF_8_portuguese.c  stem_UTF_8_romanian.c  stem_UTF_8_russian.c  stem_UTF_8_spanish.c  stem_UTF_8_swedish.c  (+2 more)
